--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>groupId</groupId>
     <artifactId>AveroCodingExercise</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.google.http-client</groupId>
